# archived-linkml-model-template

./: .gitignore  ABOUT.md  MakeConfig  Pipfile  README.md
config/: CONFIG.yaml  README.md  config_model.py  config_model.yaml  configure.py
config/templates/: Makefile  mkdocs.yaml  setup.cfg
config/templates/.github/workflows/: main.yaml
model/: CONFIG.yaml
model/schema/: sample_model.yaml
