[metadata]
name = {model_py_name}
url = {model_url}
author = {model_author}
author-email = {model_author_email}
summary = {model_synopsis}
home-page = https://{model_organization}.github.io/{model_py_name}
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers = {classifiers_}
keywords = {keywords_}

[options]
include_package_data = True

[files]
packages =
    {model_py_name}

data-files = {data_files}


